--- a/build_a_passenger_counter_app/index.html
+++ b/build_a_passenger_counter_app/index.html
@@ -9,6 +9,11 @@
 	<body>
 		<h1>People Entered:</h1>
 		<h2 id="counter-el">0</h2>
+		<button id="increment-btn" onclick="increment()">Increment</button>
+		<button id="decrement-btn" onclick="decrement()">Decrement</button>
+		<button id="save-btn" onclick="save()">Save</button>
+		<h3>Previous Entries: <span id="prev-entry"></span></h3>
+		
 		<script src="main.js"></script>
 	</body>
 </html>
