Add practice app & blackjack; update counter
Add a new practice_time_1 app (HTML, JS, CSS) implementing basic arithmetic operations and UI. Add scaffold files for a blackjack game (index.html, main.js). Update the passenger counter app: add a Reset button and handler, switch DOM updates from innerText to textContent for reliability, and adjust styles (change save button color and add reset button styling) to improve UX.

--- a/build_a_passenger_counter_app/index.html
+++ b/build_a_passenger_counter_app/index.html
@@ -12,6 +12,7 @@
 		<button id="increment-btn" onclick="increment()">Increment</button>
 		<button id="decrement-btn" onclick="decrement()">Decrement</button>
 		<button id="save-btn" onclick="save()">Save</button>
+		<button id="reset-btn" onclick="reset()">Reset</button>
 		<h3>Previous Entries: <span id="prev-entry"></span></h3>
 		
 		<script src="main.js"></script>
