--- a/build_a_blackjack_game/index.html
+++ b/build_a_blackjack_game/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<h1>Blackjack</h1>
 		<p id="message-el">Want to play a round?</p>
-		<p>Cards:</p>
-		<p>Sum:</p>
+		<p id="cards-el">Cards:</p>
+		<p id="sum-el">Sum:</p>
 		<button onclick="startGame()" class="start-btn">START GAME</button>
 		<script src="main.js"></script>
 	</body>
